<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.aliyun.qaplusdemo.ResultActivity">

    <TextView
        android:id="@+id/tv_search2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="8dp"
        android:text="@string/search_value"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_search_value2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_search2"
        android:layout_toRightOf="@id/tv_search2"
        android:hint="@string/search_hint"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_search2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_search_value2"
        android:text="@string/search"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_search_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_search2"
        android:text="@string/search_result"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/resultList"
        android:layout_below="@id/tv_search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
    </ListView>

</RelativeLayout>
